Fix cards displaying too big on mobile

--- a/client/src/components/StoreListItem.css
+++ b/client/src/components/StoreListItem.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  padding: 0 1rem;
 }
 
 .store-list-img {
+  width: 100%;
   max-width: 600px;
   border-radius: 1.2em;
   border: 1px solid hsl(0, 4%, 71%);
-  /* margin: 0 auto; */
 }
 .store-list-img:hover {
   cursor: pointer;
